tests/ui/rfc-2632-const-trait-impl/const-drop-fail.stock.stderr
error[E0277]: can't drop `NonTrivialDrop` in const contexts
  --> $DIR/const-drop-fail.rs:28:23
   |
LL |           const _: () = check($exp);
   |                         ^^^^^^^^^^^ the trait `~const Destruct` is not implemented for `NonTrivialDrop`
...
LL | / check_all! {
LL | |     NonTrivialDrop,
LL | |     ConstImplWithDropGlue(NonTrivialDrop),
LL | | }
   | |_- in this macro invocation
   |
note: the trait `Destruct` is implemented for `NonTrivialDrop`, but that implementation is not `const`
  --> $DIR/const-drop-fail.rs:28:23
   |
LL |           const _: () = check($exp);
   |                         ^^^^^^^^^^^
...
LL | / check_all! {
LL | |     NonTrivialDrop,
LL | |     ConstImplWithDropGlue(NonTrivialDrop),
LL | | }
   | |_- in this macro invocation
   = note: this error originates in the macro `check_all` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: can't drop `NonTrivialDrop` in const contexts
  --> $DIR/const-drop-fail.rs:28:23
   |
LL |           const _: () = check($exp);
   |                         ^^^^^^^^^^^ within `ConstImplWithDropGlue`, the trait `~const Destruct` is not implemented for `NonTrivialDrop`
...
LL | / check_all! {
LL | |     NonTrivialDrop,
LL | |     ConstImplWithDropGlue(NonTrivialDrop),
LL | | }
   | |_- in this macro invocation
   |
note: the trait `Destruct` is implemented for `NonTrivialDrop`, but that implementation is not `const`
  --> $DIR/const-drop-fail.rs:28:23
   |
LL |           const _: () = check($exp);
   |                         ^^^^^^^^^^^
...
LL | / check_all! {
LL | |     NonTrivialDrop,
LL | |     ConstImplWithDropGlue(NonTrivialDrop),
LL | | }
   | |_- in this macro invocation
note: required because it appears within the type `ConstImplWithDropGlue`
  --> $DIR/const-drop-fail.rs:18:8
   |
LL | struct ConstImplWithDropGlue(NonTrivialDrop);
   |        ^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the macro `check_all` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
